service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uploader
    env: test
    layer: api
  name: uploader
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 8080
    protocol: TCP
    targetPort: rest
  selector:
    app: uploader
    env: test
    layer: api
  sessionAffinity: None
